Fix timer jump

--- a/src/pages/MarketPage/components/BondCard/BondCard.module.scss
+++ b/src/pages/MarketPage/components/BondCard/BondCard.module.scss
@@ -82,6 +82,10 @@
   white-space: nowrap;
 }
 
+.infoValueTimer {
+  min-width: 150px;
+}
+
 .infoValueSpan {
   font-family: var(--font-family-chakra);
   font-weight: 400;
